--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4,7 +4,38 @@
 %% Created for Samir Barguil at 2020-03-19 08:08:32 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
+@article{wen2018yang,
+  title={A YANG data model for layer 2 virtual private network (L2VPN) service delivery},
+  author={Wen, B and Fioccola, G and Xie, C and Jalil, L},
+  journal={Internet Eng. Task Force, Fremont, CA, USA, Rep. RFC},
+  volume={8466},
+  year={2018}
+}
+
+@techreport{andersson2006framework,
+  title={Framework for layer 2 virtual private networks (L2VPNs)},
+  author={Andersson, Loa and Rosen, E},
+  year={2006},
+  institution={RFC 4664, September}
+}
+
+@article{wu2017service,
+  title={Service Models Explained},
+  author={Wu, Qin and Liu, W and Farrel, A},
+  journal={draft-wuopsawg-service-model-explained, Work in progress},
+  year={2017}
+}
+
+@inproceedings{lopez2016transport,
+  title={Transport API: A solution for SDN in carriers networks},
+  author={Lopez, Victor and Vilalta, Ricard and Uceda, Victor and Mayoral, Arturo and Casellas, Ramon and Martinez, Ricardo and Munoz, Raul and Palacios, Juan Pedro Fernandez},
+  booktitle={ECOC 2016; 42nd European Conference on Optical Communication},
+  pages={1--3},
+  year={2016},
+  organization={VDE}
+}
+
 @techreport{bjorklund2016yang,
   title={The YANG 1.1 data modeling language},
   author={Bjorklund, Martin},
