--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,85 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+
+@inproceedings{mittal2017cloud,
+  title={Cloud Testing-The Future of Contemporary Software Testing},
+  author={Mittal, Varsha and Nautiyal, Lata and Mittal, Mohit},
+  booktitle={2017 International Conference on Next Generation Computing and Information Systems (ICNGCIS)},
+  pages={131--136},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{oda2016learning,
+  title={A learning living network for open ROADM networks},
+  author={Oda, Shoichiro and Miyabe, Masataka and Yoshida, Setsuo and Katagiri, Toru and Aoki, Yasuhiko and Rasmussen, Jens C and Birk, Martin and Tse, Kathy},
+  booktitle={ECOC 2016; 42nd European Conference on Optical Communication},
+  pages={1--3},
+  year={2016},
+  organization={VDE}
+}
+
+@misc{shaikhopenconfig,
+  title={OpenConfig-progress toward vendor-neutral network management, Oct 2017},
+  author={Shaikh, Anees}
+}
+
+@inproceedings{bravalheri2019vnf,
+  title={Vnf chaining across multi-pops in osm using transport api},
+  author={Bravalheri, Anderson and Muqaddas, Abubakar Siddique and Uniyal, Navdeep and Casellas, Ramon and Nejabati, Reza and Simeonidou, Dimitra},
+  booktitle={Optical Fiber Communication Conference},
+  pages={W1G--4},
+  year={2019},
+  organization={Optical Society of America}
+}
+
+@article{mayoral2017control,
+  title={Control orchestration protocol: Unified transport API for distributed cloud and network orchestration},
+  author={Mayoral, Arturo and Vilalta, Ricard and Munoz, Raul and Casellas, Ramon and Mart{\'\i}nez, Ricardo and Moreolo, Michela Svaluto and Fabrega, Josep M and Aguado, Alejandro and Yan, Shuangyi and Simeonidou, Dimitra and others},
+  journal={Journal of Optical Communications and Networking},
+  volume={9},
+  number={2},
+  pages={A216--A222},
+  year={2017},
+  publisher={Optical Society of America}
+}
+
+@inproceedings{mayoral2016first,
+  title={First experimental demonstration of a distributed cloud and heterogeneous network orchestration with a common Transport API for E2E services with QoS},
+  author={Mayoral, Arturo and Vilalta, Ricard and Mu{\~n}oz, Raul and Casellas, Ramon and Mart{\'\i}nez, Ricardo and Moreolo, M Svaluto and F{\`a}brega, JM and Yan, S and Aguado, Alejandro and Hugues-Salas, E and others},
+  booktitle={Optical Fiber Communication Conference},
+  pages={Th1A--2},
+  year={2016},
+  organization={Optical Society of America}
+}
+
+@misc{tr2016532,
+  title={532--“Microwave Information Model”, Version 1.0},
+  author={TR, ONF},
+  year={2016}
+}
+
+@book{edelman2018network,
+  title={Network Programmability and Automation: Skills for the Next-Generation Network Engineer},
+  author={Edelman, Jason and Lowe, Scott S and Oswalt, Matt},
+  year={2018},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@article{varga2018internet,
+  title={Internet Engineering Task Force (IETF) A. Clemm Request for Comments: 8345 Huawei Category: Standards Track J. Medved},
+  author={Varga, R and Bahadur, N and Computing, Bracket and Ananthakrishnan, H and Design, Packet and Liu, X},
+  year={2018}
+}
+
+@article{clemm2018yang,
+  title={A YANG Data Model for Network Topologies},
+  author={Clemm, A and Medved, J and Varga, R and Bahadur, N and Ananthakrishnan, H and Liu, X},
+  journal={Internet Requests for Comments, RFC 8345},
+  year={2018}
+}
+
 @article{wen2018yang,
   title={A YANG data model for layer 2 virtual private network (L2VPN) service delivery},
   author={Wen, B and Fioccola, G and Xie, C and Jalil, L},
