--- a/SDTN_Networks.tex
+++ b/SDTN_Networks.tex
@@ -569,7 +569,7 @@ Obtaining the end-to-end multi-layer and multi-domain topology via automatic net
 \begin{figure}
 	\centering
 		\includegraphics[width=\linewidth]{figs/optical_topology_workflow}
-	\caption{Message Interchange for Optical Topology Discovery}
+	\caption{Messages Interchanged for Optical Topology Discovery between the SDTN and Optical SDN Controller}
 	\label{FIG:optical_topology_workflow}
 \end{figure}
 
@@ -646,14 +646,14 @@ This use case has been tested using a single IP Controller and using the L2SM mo
 \begin{enumerate}
     \item Site creation. The two sites must be created on the domain controller. Parameters such as site-id and location-id must be sent to uniquely identify the customer end-points.
     \item Bearer creation. The network side interface must be selected, so the ne-id and a port port-id must be provided.
-    \item Service Creation. VC-ID to be negotiated by the ends is provided.  
+    \item Service Creation. Virtual Circuit Identifier (VC-ID) to be negotiated by the ends is provided.  
     \item Site Network Access Creation (SNA). In this step all the data previously created is merged together into a working L2VPN service to be deployed by the controller on the devices using NETCONF. The configuration parameters needed on the body request for the SNA creation include site-id, bearer-id and vpn-id, among others such as ip connectiviy, qos management, l2 encapsulation. 
 \end{enumerate}
 
 \begin{figure}
 	\centering
 		\includegraphics[width=\linewidth]{figs/l2sm_workflow.png}
-	\caption{L2SM workflow}
+	\caption{Messages Interchanged for L2VPN Provisioning between the SDTN and the IP SDN Controller}
 	\label{L2SM_workflow}
 \end{figure}
 
@@ -728,7 +728,7 @@ First, the API Client was used to send the E2E DSR Service creation query toward
 \begin{figure}
 	\centering
 		\includegraphics[width=\linewidth]{figs/optical_provisioning_workflow.png}
-	\caption{Message Interchange for Optical Provisioning}
+	\caption{Messages Interchanged for Optical Provisioning between the SDTN and the Optical SDN Controller}
 	\label{FIG:optical_provisioning_workflow}
 \end{figure}
 
